start splittin machine learning chapter, correct bibliography and use correct synthax for citations, chapter names, references etc

--- a/biblio.bib
+++ b/biblio.bib
@@ -115,108 +115,6 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
 }
 
 
-@phdthesis{naboulsi2015mobile,
-  title = {{Mobile traffic analysis: a survey}},
-  author = {Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
-  year = {2015},
-  school = {Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
-}
-
-
-@article{OPS2006chagas,
-  title = {{Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas}},
-  author = {OPS},
-  journal = {Organizacion Panamericana de la Salud/HDM/CD},
-  volume = {425-06},
-  pages = {1--6},
-  year = {2006},
-  publisher = {OPS},
-}
-
-
-@article{OPS2014mapa,
-  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
-  author = {OPS},
-  journal = {Organizacion Panamericana de la Salud},
-  year = {2014},
-  publisher = {OPS},
-}
-
-
-@article{rassi2012american,
-  title = {{American trypanosomiasis (Chagas disease)}},
-  author = {Rassi, Anis and de Rezende, Joffre Marcondes},
-  journal = {Infectious disease clinics of North America},
-  volume = {26},
-  number = {2},
-  pages = {275--291},
-  year = {2012},
-  publisher = {Elsevier},
-}
-
-
-@inproceedings{sarraute2015socialevents,
-  title = {{Social Events in a Time-Varying Mobile Phone Graph}},
-  author = {Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
-  booktitle = {Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
-  year = {2015},
-}
-
-
-@article{schmunis2010chagas,
-  title = {{Chagas disease: a Latin American health problem becoming a world health problem}},
-  author = {Schmunis, Gabriel A and Yadon, Zaida E},
-  journal = {Acta tropica},
-  volume = {115},
-  number = {1},
-  pages = {14--21},
-  year = {2010},
-  publisher = {Elsevier},
-}
-
-
-@article{tizzoni2014use,
-  title = {{On the use of human mobility proxies for modeling epidemics}},
-  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel,             Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
-  journal = {PLoS Comput Biol},
-  volume = {10},
-  number = {7},
-  pages = {e1003716},
-  year = {2014},
-  publisher = {Public Library of Science},
-}
-
-
-@article{wesolowski2012quantifying,
-  title = {{Quantifying the impact of human mobility on malaria}},
-  author = {Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
-  journal = {Science},
-  volume = {338},
-  number = {6104},
-  pages = {267--270},
-  year = {2012},
-  publisher = {American Association for the Advancement of Science},
-}
-
-
-@article{who2016,
-  title = {{Chagas disease (American trypanosomiasis)}},
-  author = {WHO},
-  journal = {{World Health Organization} Fact sheets},
-  year = {2016},
-  url = {http://www.who.int/mediacentre/factsheets/fs340/en/},
-  urldate = {2016-05-09},
-}
-
-
-@misc{plan_nacional_chagas,
-  author = {Ministerio de Salud Argentina},
-  title = {{Plan Nacional de Chagas}},
-  url = {http://www.msal.gob.ar/chagas/},
-  year = {2016},
-  note = {[Online, accessed 9-may-2016]},
-}
-
 
 @article{decisionTreesNP,
   title = {{Constructing Optimal Binary Decision Trees is NP-complete}},
@@ -256,21 +154,16 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
-@article{dwork,Feldman-adaptiveDataAnalysis2015,
-	author    = {Cynthia Dwork and
-	Vitaly Feldman and
-	Moritz Hardt and
-	Toniann Pitassi and
-	Omer Reingold and
-	Aaron Roth},
-	title     = {Generalization in Adaptive Data Analysis and Holdout Reuse},
-	journal   = {CoRR},
-	volume    = {abs/1506.02629},
-	year      = {2015},
-	url       = {http://arxiv.org/abs/1506.02629},
-	timestamp = {Wed, 07 Jun 2017 14:42:33 +0200},
-	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DworkFHPRR15},
-	bibsource = {dblp computer science bibliography, http://dblp.org}
+@article{dworkFeldman-adaptiveDataAnalysis2015,
+  author    = {Dwork C. and Feldman V. and Hardt M. and Pitassi T. and Reingold O. and Roth },
+  title     = {Generalization in Adaptive Data Analysis and Holdout Reuse},
+  journal   = {CoRR},
+  volume    = {abs/1506.02629},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1506.02629},
+  timestamp = {Wed, 07 Jun 2017 14:42:33 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DworkFHPRR15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 
@@ -303,6 +196,18 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
   year      = {2004},
   url       = {http://www.jmlr.org/papers/volume5/grandvalet04a/grandvalet04a.pdf},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jmlr/BengioG04},
+}
+
+
+@article{mason-rocAucRelationship,
+  author    = {S. J. Mason, N. E. Graham},
+  title     = {{Areas beneath the relative operating characteristics (ROC) and relative operating levels (ROL) curves: Statistical significance and interpretation}},
+  journal   = {Q.J.R. Meteorol. Soc.},
+  volume    = {128},
+  number     = {584},
+  year      = {2002},
+  pages     = {2145-2166},
+  doi    = {10.1256/003590002320603584},
 }
 
 
@@ -460,6 +365,29 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
+
+@article{OPS2006chagas,
+  title = {{Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud/HDM/CD},
+  volume = {425-06},
+  pages = {1--6},
+  year = {2006},
+  publisher = {OPS},
+}
+
+
+@article{OPS2014mapa,
+  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud},
+  year = {2014},
+  publisher = {OPS},
+}
+
+
+
+
 @article{cruz2006chagmex,
   title={{Chagas disease in Mexico: an analysis of geographical distribution during the past 76 years-A review}},
   author={Cruz-Reyes, A and Pickering-L{\'o}pez, Jos{\'e} M},
@@ -480,25 +408,6 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
   school = {Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
 }
 
-
-@article{OPS2006chagas,
-  title = {{Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas}},
-  author = {OPS},
-  journal = {Organizacion Panamericana de la Salud/HDM/CD},
-  volume = {425-06},
-  pages = {1--6},
-  year = {2006},
-  publisher = {OPS},
-}
-
-
-@article{OPS2014mapa,
-  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
-  author = {OPS},
-  journal = {Organizacion Panamericana de la Salud},
-  year = {2014},
-  publisher = {OPS},
-}
 
 
 @article{rassi2012american,
