--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -1,3 +1,4 @@
+
 %===============================================================================
 %               File: ch2_introduction.tex
 %            Author: Juan de Monasterio
@@ -74,7 +75,7 @@ This \textit{home} characterization is based on the assumption that on any given
 
 Given the user's $H_u$, he will be considered endemic if his inferred home antenna is located in the endemic zone $E_Z$. These tagged users be considered to be the set of \textit{residents of $E_Z$}.
 
-In the case of Argentina, the risk area is the \textit{Gran Chaco} ecoregion, as described in Section~\ref{endemic_zone_argentina};
+In the case of Argentina, the risk area is the \textit{Gran Chaco} ecoregion, as described in Section~ \cref{endemic_zone_argentina};
 whereas in the case of Mexico, we used the region described in Section~ \cref{endemic_zone_mexico}.
 
 
