--- a/main.tex
+++ b/main.tex
@@ -2,9 +2,8 @@
 % !BIB program = biber
 %===============================================================================
 %          File: main.tex
-%        Author: Pedro Ferrari
+%        Author: Juan de Monasterio
 %       Created: 08 Feb 2017
-% Last Modified: 08 Feb 2017
 %   Description: Main Template File for Thesis
 %===============================================================================
 \documentclass[a4paper,11pt,leqno]{book}
@@ -25,14 +24,14 @@
 
 
 
-
-
   \mainmatter
-  \include{ch1_introduction}
-	\include{ch2_descriptions_risk}
-  \include{ch3_machine_learning}
-  \include{ch4_evaluation_results}  
-  \include{ch5_conclusion}
+  \include{ch_introduction}
+	\include{ch_descriptions_risk}
+  \include{ch_machine_learning}
+  \include{ch_model_selection}
+	\include{ch_ensemble_methods}
+  \include{ch_evaluation_results}  
+  \include{ch_conclusion}
 
 \backmatter
 	\printbibheading[heading=bibbook]
