--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -5,7 +5,7 @@
 %  Description: Chapter : Machine Learning
 %===============================================================================
 \chapter{Machine Learning}
-\label{cha:machineLearning}
+\label{ch:machineLearning}
 
 
 \section{Preamble}\label{section-preamble}
@@ -35,7 +35,7 @@ These subtle differences in the machine learning approach of a problem is also r
 %Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables.
 
 
-\subsubsection{A working example}\label{section-example}
+\subsection{A working example}\label{section-example}
 
 In this work we will be talking of the training set and the test set, noted by $\mathrm{T}$  and $\mathrm{Ts}$ as our two data sources.The objective is to build a probabilistic model which has the capacity to correctly predict the class instances of new data objects, such as those from $\mathrm{Ts}$, based on having seen information of objects from $\mathrm{T}$.
 
@@ -282,7 +282,7 @@ whilst the Hessian takes the following form:
 From the derivations above, we can now firt $\theta$ using an optimization procedure that would take advantage of having the closed-form representations of the first and second derivatives of the maximum likellihood function. 
 
 
-\subsection{Model Regularization and Hyper-parameters} \label{subsection-hyperParametersRegularization}
+\section{Model Regularization and Hyper-parameters} \label{section-hyperParametersRegularization}
 
 
 \begin{definition}{Model Regularization}
