standarize cite notation

--- a/ch_evaluation_results.tex
+++ b/ch_evaluation_results.tex
@@ -2,7 +2,7 @@
 %     File: ch4_evaluation_results.tex
 %    Author: Juan de Monasterio
 %    Created: 15 Feb 2017
-%  Description: Chapter 4: Evaluation and Results
+%  Description: Chapter: Evaluation and Results
 %===============================================================================
 
 \chapter{Evaluation and Results}\label{cha:evaluation-results}
