add Resumen and abstract separately

--- a/preface.tex
+++ b/preface.tex
@@ -3,17 +3,9 @@
 %        Author: Juan de Monasterio
 %       Created: 08 Feb 2017
 % Last Modified: 08 Feb 2017
-%   Description: Preface for Math Thesis
+%   Description: Resumen de la Tesis
 %===============================================================================
-\chapter{Abstract}
-\label{cha:abstract}
+\chapter{Res\'umen}
+\label{cha:resumen}
 
 Al día de hoy, la enfermedad del Chagas sigue siendo una epidemia de escala global. Esta se encuentra extendida en gran medida a lo largo de todo el continente americano y con métodos de control que se concentran sobre las regiones infestadas por el vector de transmisión. Sin embargo, los patrones de movilidad humana también representan un factor importante en la transmisión congénita de esta enfermedad. Su propagación de áreas de alta a baja infestación son fortalecidas por migraciones de tipo estacionales o de larga duración. Usando los datos georreferenciados de llamados por telefonía celular puesta a disposición por GranData Labs, y en colaboración con la Fundación Mundo Sano, el objetivo de este trabajo es el de evaluar la relación entre el uso celular y el comportamiento social, con el de las migraciones humanas. Este análisis servirá para ayudar en los esfuerzos de prevención del Chagas en Argentina y México, donde se lograron identificar posibles focos endémicos de esta enfermedad, fuera de la zona de infestación vectorial. Para hacer esto, utilizamos diferentes técnicas de Aprendizaje Automática como modelos probabilísticos. Más de 150 atributos fueron extraídos de los datos y contrastados con la probabilidad de haber migrado desde la zona endémica. Los resultados aquí expuestos sirven para discriminar aquellos atributos más relevantes en la detección de estos movimientos, especialmente en usuarios con fuertes lazos sociales con la región endémica o con un patrón alto de movilidad. Con visualizaciones geograficas de estas relaciones sociales, logramos mostrar locaciones tradicionalmente no endémicas donde potencialmente se encuentren mayores tasas de prevalencia.
-\\
-The Chagas disease continues to represent a global epidemiological problem, particularly for the South American continent. Current control methods focus solely on the vector-infested regions. Still, human mobility patterns represent an important factor in the congenital transmission of this disease. Its spread from high to low infested regions is strengthened by seasonal and long-term migrations. Using the geo-referenced mobile phone data made available by GranData Labs, and in collaboration with the Mundo Sano Foundation, the objective of this work is to assess the relationship of calling patterns and user behavior, with migrations. This analysis, in turn, helps for Chagas prevention efforts in Argentina and Mexico, where we identified possible endemic foci outside of vector-infested regions. To do this, we evaluated different Machine Learning techniques as probabilistic models. More than 150 features were extracted from the data and related to the probability of having lived or moved from an endemic region. The results here presented identify key features for the detection of these movements, especially in users with strong ties to the endemic regions or with high mobility patterns. By presenting geographic visualizations of social ties, we tag locations outside the endemic region with a hypothetical higher prevalence rate.
-
-\begin{flushright}
-	\bigskip
-	Buenos Aires\\
-	May 2017
-\end{flushright}
