--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,8 @@
   \titlepg
   \copyrightpg
   \ifdef{\dedication}{\dedication}{}
-  \include{preface}  
+  \include{preface}
+  \include{preface2}
   \tableofcontents
 
 
