remove dot in pdf Title

--- a/preamble.tex
+++ b/preamble.tex
@@ -315,8 +315,8 @@ pdfkeywords={machine learning}
       \vspace{0.3\textheight}
       \rule{\textwidth}{1.5pt}\par
       \vspace{\baselineskip}
- {\bfseries\Huge{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático.}\par
- 	\bigskip\Large{Exploring Latino American chagasic migrations with machine learning.}}\\
+ {\bfseries\Huge{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}\par
+ 	\bigskip\Large{Exploring Latino American chagasic migrations with machine learning}}\\
       \vspace{\baselineskip}
       \rule{\textwidth}{1.5pt}\par
       \vfill
