--- a/ch_evaluation_results.tex
+++ b/ch_evaluation_results.tex
@@ -5,7 +5,7 @@
 %  Description: Chapter: Evaluation and Results
 %===============================================================================
 
-\chapter{Evaluation and Results}\label{cha:evaluation-results}
+\chapter{Combined Results}\label{cha:evaluation-results}
 
 
 \section{Prediction of Long-term Migrations} \label{long_term}
